# swayopacity

./: Cargo.toml  README.md
src/: main.rs
systemd/: swayopacity.service
